# notebook_env

./: Dockerfile  README.md  docker-compose.yml  gitlab_text.txt  pyproject.toml
.devcontainer/: devcontainer.json
src/ds_lab/: __init__.py
src/notebook/: test.ipynb
